# ego-design

./: .gitignore  04-external-tools.md  LICENSE  README.md  pyproject.toml
docs/: 00-origin-story.md  01-philosophy.md  02-architecture.md  03-data-design.md  04-external-tools.md  05-function-breakdown.md  06-basic-design.md  07-detailed-design.md  08-implementation.md
ego/: __init__.py  bootstrap.py
ego/adapters/input/cli/: __init__.py  main.py  parser.py
ego/adapters/llm/claude/: __init__.py  adapter.py
ego/adapters/llm/codex_cli/: __init__.py  adapter.py
ego/adapters/store/sqlite/: __init__.py  adapter.py
ego/core/: domain.py  errors.py
ego/core/approval/: __init__.py
ego/core/audit/: __init__.py
ego/core/session/: __init__.py
ego/core/sot/: __init__.py
ego/core/structurer/: __init__.py
ego/ports/: __init__.py  input_port.py  llm_port.py  store_port.py
tests/: conftest.py
tests/integration/: test_flows.py
tests/system/: test_system.py
tests/unit/: test_approval.py  test_architecture.py  test_audit.py  test_claude_adapter.py  test_cli_adapter.py  test_codex_adapter.py  test_session.py  test_sot.py  test_store_contract.py  test_structurer.py
